<resources>
    <string name="app_name">ComposeExamples</string>

    <string name="attention">Attention</string>
    <string name="back_button">Back</string>
    <string name="delete">Delete</string>
    <string name="logo">Logo</string>
    <string name="profile">Profile</string>
    <string name="price">Price</string>
    <string name="sell">Sell</string>
    <string name="save_action">Save</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>

    <!-- birthday card -->
    <string name="happy_birthday_text">Happy Birthday Sam!</string>
    <string name="signature_text">From Emma</string>

    <!-- tip calculator -->
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="how_was_the_service">Tip Percentage</string>
    <string name="round_up_tip">Round up tip?</string>

    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>

    <!-- art -->
    <string name="architecture">Architecture</string>
    <string name="crafts">Crafts</string>
    <string name="business">Business</string>
    <string name="culinary">Culinary</string>
    <string name="design">Design</string>
    <string name="fashion">Fashion</string>
    <string name="film">Film</string>
    <string name="gaming">Gaming</string>
    <string name="drawing">Drawing</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="music">Music</string>
    <string name="painting">Painting</string>
    <string name="photography">Photography</string>
    <string name="tech">Tech</string>

    <!-- 自定义 Material Theme -->
    <string name="woof">Woof</string>
    <string name="dog_name_1">Koda</string>
    <string name="dog_name_2">Lola</string>
    <string name="dog_name_3">Frankie</string>
    <string name="dog_name_4">Nox</string>
    <string name="dog_name_5">Faye</string>
    <string name="dog_name_6">Bella</string>
    <string name="dog_name_7">Moana</string>
    <string name="dog_name_8">Tzeitel</string>
    <string name="dog_name_9">Leroy</string>
    <string name="dog_description_1">Eating treats on the terrace</string>
    <string name="dog_description_2">Barking at Daddy</string>
    <string name="dog_description_3">Stealing socks</string>
    <string name="dog_description_4">Meeting new animals</string>
    <string name="dog_description_5">Digging in the garden</string>
    <string name="dog_description_6">Chasing sea foam</string>
    <string name="dog_description_7">Bothering her paw-rents</string>
    <string name="dog_description_8">Sunbathing</string>
    <string name="dog_description_9">Sleeping in dangerous places</string>
    <string name="about">About:</string>
    <string name="years_old">%d years old</string>
    <string name="expand_button_content_description">See more or less information about a dog.</string>

    <!-- Activity 生命周期: 甜点 -->
    <string name="dessert_sold">Desserts sold</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="share">Share</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of $%2$d #AndroidDessertClicker</string>
    <string name="sharing_not_available">Sharing Not Available</string>

    <!-- ViewModel: 猜单词游戏 -->
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d/%d</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="wrong_guess">Wrong Guess!</string>

    <!-- cupcake -->
    <string name="cupcake_home">Cupcake Home</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \nFlavor: %2$s \nPickup date: %3$s \nTotal: %4$s \n\nThank you!</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>

    <!-- DessertRelease -->
    <string name="grid_layout_toggle">Grid layout</string>
    <string name="linear_layout_toggle">Linear layout</string>
</resources>